<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleDBLP</string>
    <string name="bookmark_activity">SimpleDBLP</string>
    <string name="action_settings">Settings</string>
    <string name="authorSearch">Author(s)</string>
    <string name="author_hint">Search by author\'s name</string>
    <string name="title_hint">Search by paper title</string>
    <string name="year_hint">Search by year</string>
    <string name="venue_hint">Search by venue</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="searchbutton">Search</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_test_activity2">TestActivity2</string>
    <string name="search_activity">Search Results</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_searchpage">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_bookmarks">BookmarksActivity</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_results_list">ResultsListActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
